--- a/templates/default/default/top.html
+++ b/templates/default/default/top.html
@@ -10,7 +10,7 @@ window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMin
 		<div class="top_left">
 			欢迎来到<{$setting.sitename}>！
 			<{if $islogin == 1}>
-				<a href="<{$weburl}>/index.php?m=login">个人中心</a>
+				<a href="<{$weburl}>/index.php?m=user">个人中心</a>
 			<{else}>
 				<a href="<{$weburl}>/index.php?m=login">登录</a>
 			<{/if}>
