--- a/templates/default/default/top.html
+++ b/templates/default/default/top.html
@@ -17,6 +17,7 @@ window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMin
 		</div>
 		<div class="top_right">
 			<a href="<{$weburl}>/m/">手机端</a>&nbsp;&nbsp;|&nbsp;&nbsp;客服热线：<span class="orange01 fb"><{$setting.tel}></span>
+			<img srv="static/img/mobile_url.png">
 		</div>
 	</div>
 </div>
