--- a/templates/default/default/top.html
+++ b/templates/default/default/top.html
@@ -16,8 +16,8 @@ window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMin
 			<{/if}>
 		</div>
 		<div class="top_right">
-			<a href="<{$weburl}>/m/">手机端</a>&nbsp;&nbsp;|&nbsp;&nbsp;客服热线：<span class="orange01 fb"><{$setting.tel}></span>
-			<img src="/static/img/mobile_url.png" style="position:relative; top:0px; left:-121px;">
+			<a href="<{$weburl}>/m/" onmouseover="javascript:$('#mobile_url').show();" onmouseout="javascript:$('#mobile_url').hide();">手机端</a>&nbsp;&nbsp;|&nbsp;&nbsp;客服热线：<span class="orange01 fb"><{$setting.tel}></span>
+			<img src="/static/img/mobile_url.png" id="mobile_url" style="position:relative; top:0px; left:-121px;">
 		</div>
 	</div>
 </div>
