--- a/templates/default/default/cars.html
+++ b/templates/default/default/cars.html
@@ -292,7 +292,7 @@
 			<{if $pic_list neq ""}>
 			<div class="box">
 				<{foreach from=$pic_list item=piclist}>
-				<p class="tc mt10"><img src="<{$weburl}><{$piclist.pic}>"></p>
+				<p class="tc mt10"><img src="<{$weburl}><{$piclist.pic}>" class="carinfo_img"></p>
 				<{/foreach}>
 			</div>
 			<{/if}>
