--- a/templates/default/default/css/car.css
+++ b/templates/default/default/css/car.css
@@ -318,3 +318,8 @@ vertical-align: top;
 /*按钮*/
 .buymenu{display:block;height:45px;line-height:45px;background:#fc7000;color:#fff;font-size:16px;font-weight:bold;text-align:center;}
 .buymenu:hover{color:#fff;}
+
+.carinfo_img{width:800px;}
+
+
+
