--- a/templates/default/default/user_addcar.html
+++ b/templates/default/default/user_addcar.html
@@ -80,10 +80,10 @@ $(function(){
 <form name="form1" class="carform" enctype="multipart/form-data" method="post" action="index.php?m=user">
     <table cellspacing="0" cellpadding="0" width="100%"  class="maintable">
 			<tr>
-				<th>所在城市：</th>
+				<th>推荐位：</th>
 				<td>
 					<input name="isrecom" value="1" checked="" type="checkbox">
-					推荐   
+					推荐 (首页)  
 					<input name="issprecom" value="1" checked="" type="checkbox">
 					特荐   
 					<input name="ishot" value="1" checked="" type="checkbox">
