--- a/templates/admin/add_cars.html
+++ b/templates/admin/add_cars.html
@@ -101,7 +101,11 @@ KindEditor.ready(function(K) {
 		<table cellspacing="0" cellpadding="0" width="100%"  class="maintable">
 			<tr>
 				<th>推荐位：</th>
-				<td><input type="checkbox" name="isrecom" value="1" <{if $cars.isrecom==1}>checked<{/if}>> 推荐(首页)   &nbsp;&nbsp;<input type="checkbox" name="issprecom" value="1" <{if $cars.issprecom==1}>checked<{/if}>> 特荐 &nbsp;&nbsp; <input type="checkbox" name="ishot" value="1" <{if $cars.ishot==1}>checked<{/if}>> 热门 </td>
+				<td>
+					<input type="checkbox" name="isrecom" value="1" <{if $cars.isrecom==1}>checked<{/if}>> 推荐(首页)   &nbsp;&nbsp;
+					<input type="checkbox" name="issprecom" value="1" <{if $cars.issprecom==1}>checked<{/if}>> 特荐 &nbsp;&nbsp; 
+					<input type="checkbox" name="ishot" value="1" <{if $cars.ishot==1}>checked<{/if}>> 热门 
+				</td>
 				<th>浏览次数：</th>
 				<td><input type="text" name="p_hits" value="<{$cars.p_hits}>" size="6"></td>
 			</tr>
