--- a/templates/admin/cars_list.html
+++ b/templates/admin/cars_list.html
@@ -69,7 +69,7 @@ $(document).ready(function() {
 	<div class="search clearfix">
 		<div class="searchL">
 			<ul class="menulist">
-				<li><a href="<{$adminpage}>?m=cars&a=add" class="add">添加车源</a></li>
+				<!--<li><a href="<{$adminpage}>?m=cars&a=add" class="add">添加车源</a></li>-->
 			</ul>
 		</div>
 		<{if $setting.version==2 or $setting.version==3}>
