--- a/templates/admin/add_brand.html
+++ b/templates/admin/add_brand.html
@@ -5,6 +5,10 @@
 <title></title>
 <link href="static/css/admin/style.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" href="admin/kindeditor/themes/default/default.css" />
+<script type="text/javascript" src="static/js/jquery-1.7.1.js"></script>
+<script charset="utf-8" src="admin/kindeditor/kindeditor-min.js"></script>
+<script charset="utf-8" src="admin/kindeditor/lang/zh_CN.js"></script>
+<script type="text/javascript" src="static/js/Validform_v5.3.2_min.js"></script>
 <script>
 	$(function() {
 		//表单验证
