--- a/templates/default/default/index.html
+++ b/templates/default/default/index.html
@@ -219,7 +219,7 @@
             </div>
             <div class="lefttitle"> <span class="lefttitle_icon" id="icon_01"></span> 按品牌 </div>
             <div class="triangle"></div>
-            <div class="clearfix""> <{foreach from=$recombrandlist key=skey item=brandlist}><a href="<{$weburl}>/index.php?m=search&c=b_<{$brandlist.b_id}>" <{if $smarty.cookies.brand==$brandlist.b_id}>class="here"<{/if}>><{$brandlist.b_name}></a><{/foreach}> <a href="<{$weburl}>/index.php?m=search" class="more">更多<i></i></a> </div>
+            <div class="clearfix""> <{foreach from=$recombrandlist key=skey item=brandlist}><a href="<{$weburl}>/index.php?m=search&c=b_<{$brandlist.brand_id}>" <{if $smarty.cookies.brand==$brandlist.brand_id}>class="here"<{/if}>><{$brandlist.brand_name}></a><{/foreach}> <a href="<{$weburl}>/index.php?m=search" class="more">更多<i></i></a> </div>
           </div>
           <div class="leftsearchbox">
             
