--- a/templates/default/default/carlist.html
+++ b/templates/default/default/carlist.html
@@ -13,7 +13,7 @@
 				//品牌选择
 				$("#brand").change(function(){
 					$.get("<{$weburl}>/index.php?m=ajax&ajax=1", { 
-						bid :  $("#brand").val() 
+						brandid :  $("#brand").val() 
 					}, function (data, textStatus){
 						   $("#subbrand").html(data); // 把返回的数据添加到页面上
 						}
