--- a/templates/m/index.html
+++ b/templates/m/index.html
@@ -21,7 +21,7 @@
 <!--头部--> 
 <div class="header clearfix back">
     <div class="logo"><a href="index.php" title=""><{$setting.sitename}></a></div>
-    <div class="city"><a href="index.php?m=login" title="">登录</a></div>
+    <div class="city"><a href="index.php?m=login" title="登录">登录</a></div>
 </div>
 <!--头部结束-->
 <!--主体-->
