--- a/templates/m/index.html
+++ b/templates/m/index.html
@@ -21,6 +21,12 @@
 <!--头部--> 
 <div class="header clearfix back">
     <div class="logo"><a href="index.php" title=""><{$setting.sitename}></a></div>
+		<{if $islogin == 1}>
+			<a href="<{$weburl}>/index.php?m=user">个人中心</a>
+		<{else}>
+			<a href="<{$weburl}>/index.php?m=login">登录</a>
+		<{/if}>
+
     <div class="city"><a href="index.php?m=login" title="登录">登录</a></div>
 </div>
 <!--头部结束-->
