--- a/templates/m/index.html
+++ b/templates/m/index.html
@@ -22,9 +22,9 @@
 <div class="header clearfix back">
     <div class="logo"><a href="index.php" title=""><{$setting.sitename}></a></div>
 		<{if $islogin == 1}>
-	   <div class="city" style="width:auto;"><a href="<{$weburl}>/m/index.php?m=user" title="个人中心">个人中心</a></div>
+	   <div class="city" style="width:auto; padding-right:5px;"><a href="<{$weburl}>/m/index.php?m=user" title="个人中心">个人中心</a></div>
 		<{else}>
-		 <div class="city" style="width:auto;"><a href="index.php?m=login" title="登录">登录</a></div>
+		 <div class="city" style="width:auto;padding-right:5px;"><a href="index.php?m=login" title="登录">登录</a></div>
 		<{/if}>
 
 </div>
