--- a/templates/m/user_carlist.html
+++ b/templates/m/user_carlist.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="uk-grid uk-grid-collapse">
 				<div class="uk-width-1-2">
-					<a href="index.php?m=user&a=refresh&id=<{$cars.p_id}>&page=<{$currpage}>" class="button uk-button lx">刷新</a>
+					<a href="index.php?m=user&a=refresh&id=<{$cars.p_id}>&page=<{$currpage}>" class="button uk-button">刷新</a>
 				</div>
 				<div class="uk-width-1-2">
 					<a href="index.php?m=user&a=sellcar&sell=<{if $cars.issell==1}>0<{else}>1<{/if}>&id=<{$cars.p_id}>&page=<{$currpage}>" class="button uk-button lx"><{if $cars.issell==1}>恢复为在售<{else}>设置为已出售<{/if}></a> 
