--- a/templates/m/user_addcar.html
+++ b/templates/m/user_addcar.html
@@ -25,6 +25,18 @@
 			<div class="box business-hz">
 				<div class="uk-grid uk-grid-collapse">
 					<div class="uk-width-3-10 uk-text-left left2">
+						推荐：
+					</div>
+					<div class="uk-width-7-10 uk-text-left right">
+						<input type="checkbox" name="isrecom" value="1" <{if $cars.isrecom==1}>checked<{/if}>> 推荐(首页)   &nbsp;&nbsp;
+						<input type="checkbox" name="issprecom" value="1" <{if $cars.issprecom==1}>checked<{/if}>> 特荐 &nbsp;&nbsp; 
+						<input type="checkbox" name="ishot" value="1" <{if $cars.ishot==1}>checked<{/if}>> 热门 
+					</div>
+				</div>
+			</div>
+			<div class="box business-hz">
+				<div class="uk-grid uk-grid-collapse">
+					<div class="uk-width-3-10 uk-text-left left2">
 						品牌：
 					</div>
 					<div class="uk-width-7-10 uk-text-left right">
