--- a/templates/m/add_carpicture.html
+++ b/templates/m/add_carpicture.html
@@ -37,7 +37,7 @@
 					</span>
 					<span class="loading"></span>
 					<p class="upload_text">
-						
+						封面图片
 						<img src="<{$weburl}>/static/img/delete.png" width="22" height="22" class="del_img" <{if $cars.p_mainpic<>''}>style="display:block;"<{/if}>>
 					</p>
 				</li>
