--- a/templates/m/user.html
+++ b/templates/m/user.html
@@ -38,10 +38,10 @@
 		
 		
 		<div class="business-nav uk-margin-bottom">
-			<a href="<{$weburl}>/m/index.php?m=user&a=carlist"><img src="<{$weburl}>/static/img/business-nav-01.png" /></a>
+			<a href="<{$weburl}>/m/index.php?m=user&a=carlist"><img src="<{$weburl}>/static/img/zaiku.png" /></a>
 		</div>
 		<div class="business-nav uk-margin-bottom">
-			<a href="<{$weburl}>/m/index.php?m=user&a=carlistselled"><img src="<{$weburl}>/static/img/business-nav-01.png" /></a>
+			<a href="<{$weburl}>/m/index.php?m=user&a=carlistselled"><img src="<{$weburl}>/static/img/chuku.png" /></a>
 		</div>
 		
 		<a href="<{$weburl}>/index.php?m=user&a=logout" class="business-button uk-button">退出登录</a>
