--- a/templates/default/default/assess.html
+++ b/templates/default/default/assess.html
@@ -69,7 +69,8 @@ $(document).ready(function() {
 						</tr>
 						<tr>
 							<th>上牌日期：</th>
-							<td><select name="p_year" datatype="n" nullmsg="请选择年份！" class="select02">
+							<td>
+								<select name="p_year" datatype="n11" nullmsg="请选择年份！" class="select02">
 									<{$select_year}>
 								</select>
 								<select name="p_month" datatype="n" nullmsg="请选择月份！" class="select02">
